<resources>
    <string name="app_name">Discover Ourense</string>
    <string name="ourense">Ourense</string>
    <string name="fall_in_love">Fall in love with\n
        <xliff.g example="Ourense" id="city name">%s</xliff.g></string>
    <string name="explore">EXPLORE</string>
    <string name="star_content_description">Number of stars</string>
    <string name="bar_content_description">This business is a bar</string>
    <string name="restaurant_content_description">This business is a restaurant</string>
    <string name="tapas_content_description">This business is a tapas bar</string>
    <string name="galician_content_description">This business is a Galician food restaurant</string>
    <string name="japanese_content_description">This business is a Japanese restaurant</string>
    <string name="grill_content_description">This business is a grill restaurant</string>
    <string name="mexican_content_description">This business is a Mexican food restaurant</string>
    <string name="wine_content_description">This business is a wine cellar</string>
    <string name="fast_food_content_description">This business is a fast-food restaurant</string>
    <string name="italian_content_description">This business is an Italian food restaurant</string>
    <string name="turkish_content_description">This business is a Turkish food restaurant</string>
    <string name="american_content_description">This business is an American food
        restaurant</string>
    <string name="type_title">Type of food</string>
    <string name="stars_title">Stars</string>
    <string name="bar_type">bar</string>
    <string name="restaurant_type">restaurant</string>
    <string name="tapas_type">tapas</string>
    <string name="galician_type">Galician</string>
    <string name="japanese_type">Japanese</string>
    <string name="grill_type">grill</string>
    <string name="mexican_type">Mexican</string>
    <string name="wine_type">wine</string>
    <string name="fast_food_type">fast-food</string>
    <string name="italian_type">Italian</string>
    <string name="turkish_type">Turkish</string>
    <string name="american_type">American</string>
    <string name="do_title_trekking_1">Trekking</string>
    <string name="do_title_thermal_2">Thermal Tourism</string>
    <string name="do_title_rural_3">Rural Tourism</string>
    <string name="do_title_btt_4">BTT</string>
    <string name="do_title_theatre_5">Theatre</string>
    <string name="do_title_music_6">Concerts</string>
    <string name="do_title_museums_7">Museums</string>
    <string name="do_title_routes_8">Tourist Routes</string>
    <string name="do_title_santiago_9">The Way to Santiago</string>
    <string name="do_title_catamaran_10">Catamaran Trips</string>
    <string name="do_title_train_11">Thermal Train</string>
    <string name="do_title_familiar_12">Familiar Vacation</string>
    <string name="do_title_entroido_13">Popular Festivals</string>
    <string name="do_title_maios_14">Popular Festivals</string>
    <string name="do_title_magosto_15">Popular Festivals</string>
    <string name="do_title_samhain_16">Popular Festivals</string>
    <string name="do_title_festivities_17">Popular Festivals</string>
    <string name="do_title_wine_18">Wine</string>
    <string name="do_title_gastronomy_19">Gastronomy</string>
    <string name="do_title_night_20">Night Life</string>
    <string name="do_short_trekking_1">Walk on your own way</string>
    <string name="do_short_thermal_2">City of Water</string>
    <string name="do_short_rural_3">Take a break</string>
    <string name="do_short_btt_4">Ride your bike</string>
    <string name="do_short_theatre_5">Feelings to the surface</string>
    <string name="do_short_music_6">Release your inner Rock\'n\'Roll</string>
    <string name="do_short_museums_7">Cultural activity</string>
    <string name="do_short_routes_8">Discovering Ourense</string>
    <string name="do_short_santiago_9">A must stop</string>
    <string name="do_short_catamaran_10">Enjoy the Sil Canyon</string>
    <string name="do_short_train_11">City tour</string>
    <string name="do_short_familiar_12">Activities for the entire family</string>
    <string name="do_short_entroido_13">Entroido</string>
    <string name="do_short_maios_14">Os Maios</string>
    <string name="do_short_magosto_15">Magosto</string>
    <string name="do_short_samhain_16">Samhain</string>
    <string name="do_short_festivities_17">Festivities</string>
    <string name="do_short_wine_18">Products with Denomination of Origin</string>
    <string name="do_short_gastronomy_19">Flavours from Ourense</string>
    <string name="do_short_night_20">\"Os Viños\" District</string>
    <string name="do_long_trekking_1">With a privileged location, a valley crossed by rivers and
        surrounded by hills, Ourense has natural landscapes of great beauty that are worth
        exploring, starting with its rivers. Walking the banks of the Minho means to discover a
        world of small animals and riverside forests where to get lost, going through paths that
        extend along its tributaries, kilometres and kilometres of nature.\n\nIf you want more, here
        you have an ideal base camp to discover a province where nature becomes legend: river Sil\'s
        canyons, Invernadoiro Natural Park, Baixa Limia-Gerés, the snowy mountains of Peña Trevinca,
        and so on.</string>
    <string name="do_long_thermal_2">The banks of river Minho constitute the city\'s great green
        artery: several kilometres of lush vegetation for walking, running or cycling while
        admiring nature and the landscape. In the most western section, after the Millennium Bridge,
        we find several springs of thermal water, many of them equipped for bathing.\n\nThe route
        begins on the right bank of the river, in the thermal area of A Chavasqueira, the closest
        one to the city. The path continues to O Tinteiro, and from there to the thermal area of ​​
        Muíño da Veiga with its four pools. A little further on, the Outariz Thermal Station offers
        beauty treatments, a sauna and two thermal circuits at very competitive prices. Also, the
        pools of Outariz and Burga de Canedo is the largest area of thermal activity in Ourense,
        which is also free.</string>
    <string name="do_long_rural_3">If you ascend to the areas of Cudeiro, Vilar, Palmés or Seixalbo,
        you will not only enjoy breathtaking views of the city of bridges, but you will also find
        rural villages that still retain their traditional architecture. In their ancient paths,
        camouflaged among the vegetation of the Ourense forest (halfway between the Atlantic and the
        Mediterranean forest), hiking and cycling routes are waiting for you, ideal to enter this
        green Ourense, a great unknown.</string>
    <string name="do_long_btt_4">Trails along the river, paths between forests, urban parks,
        panoramic viewpoints&#8230; get ready to ride your bike and discover spectacular landscapes
        surrounding the city.</string>
    <string name="do_long_theatre_5">Ourense is undoubtly a city related with arts. All over the
        year, you can assist to numerous theatre festivals, some of them are performed around the
        streets and some others take place in the Municipal Auditorium or the Principal Theatre.\n
        \nThe Principal Theatre is closely linked, in the memory of the city, to the traveling
        circuses that with their shows were the delight of young and old. One of the most famous in
        Ourense in the first decades of the 20th century was the Circo Feijóo, run by Secundino
        Feijóo, a native of Vilanova dos Infantes (Celanova). One of its main attractions was
        Mendoff, the tamer of the beasts, also captain of the cossacks, admired for his bravery and
        courage. One day a student asked Mendoff for his origins, and he replied, half in secret,
        that he was from Celanova, as his boss. But of course, it is more interesting to proclaim
        that the tamer was a fierce Russian.</string>
    <string name="do_long_music_6">Ourense has had few ambassadors as popular as Los Suaves, the
        legendary rock band led by brothers Yosi and Charly Domínguez. These musicians have always
        maintained a close relationship with the city, present in their songs, lyrics and disc
        covers, such as the legendary San Francisco Express. This feeling of rock spreads through
        Ourense\'s nightlife, in the area of \"Os Viños\". Here, a square bears their name.\n\n
        Following their school of rock, the city has seen the appearance of other historical bands,
        such as Megapearls, Mitocondrias or Cosecha Roja (today Burgas Beat). In the current
        scenario, we should highlight BestLife (UnderYourSeat), with a certain Anglo-Saxon
        influence, and Os Amigos dos Músicos, who play quality folk-pop and are regulars of Café
        Pop Torgal, a little café near the university area, in which are programmed first line
        acoustic concerts, as well as interesting seasons like the American Autumn. Especially
        active and punk-minded are the team in charge of El Pueblo, a venue for concerts on Hernán
        Cortés street, deep in the old city.\n\nFolk music has also played a significant role in the
        city\'s music scene, notably with band Mutenrohi. They were inspired from the rich Galician
        musical folklore that institutions such as the Royal Bagpipe Band or the Choir of Ruada have
        promoted for years. Mixing traditional music with other tropical sounds and rhythms, two
        unforgettable bands, Lamatumbá and O Sonoro Maxín, stood out for their anthems, essential in
        the festivals that flood Galicia every summer.</string>
    <string name="do_long_museums_7">Ourense has always had a special relationship with the world
        of arts and culture. At its most splendid moment, in the early 20th century, it came to be
        known as the \"Athens of Galicia\", the birthplace of the so-called Generation Nós, a group
        of intellectuals who led the renewal and modernization of Galician culture.\n\nThe epithet is
        not capricious; a very important list of writers, musicians and artists were very closely
        linked to the old Auria, having left their mark there.\n\nYou can enjoy some fabulous artistic
        works on the several museums located in the city.</string>
    <string name="do_long_routes_8">A different and healthy way of getting to know Ourense is to get
        out of its urban centre to discover its green belt, ideal for hiking. The gentle orography
        invites you to take long walks through landscapes and places of great natural, historical
        and ethnographic interest; trails, paths and tracks that will take you through magical
        places.</string>
    <string name="do_long_santiago_9">The Mozarabic Way is the longest Galician Jacobean Way:
        connecting Sevilla and Santiago de Compostela while extending an ancient Roman road that
        linked Merida with Astorga. The pilgrim that follows the old Via de la Plata takes the
        detour in Granja de la Moreruela (Zamora) up to A Gudiña, where there are two routes for
        Santiago (one going across Laza and the other across Verin) leading to Ourense.\n\nOurense
        receives the pilgrims in the rural village of Seixalbo, a set of ethnographic value still
        retaining its medieval trace. From there, the Way enters the city from the south, going
        through Zamora Avenue and Progreso Street to As Burgas, the hot springs which every pilgrim
        must visit since the Middle Ages.</string>
</resources>