<?xml version="1.0" encoding="utf-8"?><!--Collapsing toolbar tutorial:
http://www.androidauthority.com/using-coordinatorlayout-android-apps-703720/-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.discoverourense.DetailLocationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_image"
                app:layout_collapseMode="parallax"
                tools:ignore="contentDescription"
                style="@style/location_image_style" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/information_layout"
                android:layout_marginBottom="@dimen/marginSmall">

                <TextView
                    android:id="@+id/location_short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:textColor="@color/secondaryDarkText"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/location_long_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginExtraBig"
                    android:textColor="@color/primaryDarkText"
                    android:textSize="@dimen/textSize"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_layout"
                style="@style/information_sheet_layout">

                <TextView
                    android:id="@+id/phone_text"
                    android:autoLink="phone"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    style="@style/contact_text_style" />

                <TextView
                    android:id="@+id/mail_text"
                    android:autoLink="email"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    style="@style/contact_text_style" />

                <TextView
                    android:id="@+id/web_text"
                    android:autoLink="web"
                    android:drawableLeft="@drawable/ic_link_black_24dp"
                    style="@style/contact_text_style" />

                <TextView
                    android:id="@+id/timetable_text"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    style="@style/contact_text_style" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stars_layout"
                android:visibility="gone"
                style="@style/information_sheet_layout">

                <TextView
                    android:id="@+id/stars_title"
                    android:text="@string/stars_title"
                    style="@style/sheet_title" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star_five"
                        style="@style/business_icon"
                        android:contentDescription="@string/star_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_star_white_24dp"
                        android:tint="@color/colorAccent" />

                    <ImageView
                        android:id="@+id/star_four"
                        style="@style/business_icon"
                        android:contentDescription="@string/star_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_star_white_24dp"
                        android:tint="@color/colorAccent" />

                    <ImageView
                        android:id="@+id/star_three"
                        style="@style/business_icon"
                        android:contentDescription="@string/star_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_star_white_24dp"
                        android:tint="@color/colorAccent" />

                    <ImageView
                        android:id="@+id/star_two"
                        style="@style/business_icon"
                        android:contentDescription="@string/star_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_star_white_24dp"
                        android:tint="@color/colorAccent" />

                    <ImageView
                        android:id="@+id/star_one"
                        style="@style/business_icon"
                        android:contentDescription="@string/star_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_star_white_24dp"
                        android:tint="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/type_layout"
                android:visibility="gone"
                style="@style/information_sheet_layout">

                <TextView
                    android:id="@+id/type_title"
                    android:text="@string/type_title"
                    style="@style/sheet_title" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/type_bar"
                        style="@style/business_icon"
                        android:contentDescription="@string/bar_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_bar" />

                    <ImageView
                        android:id="@+id/type_restaurant"
                        style="@style/business_icon"
                        android:contentDescription="@string/restaurant_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_restaurant" />

                    <ImageView
                        android:id="@+id/type_tapas"
                        style="@style/business_icon"
                        android:contentDescription="@string/tapas_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_tapas" />

                    <ImageView
                        android:id="@+id/type_galician"
                        style="@style/business_icon"
                        android:contentDescription="@string/galician_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_galician" />

                    <ImageView
                        android:id="@+id/type_japanese"
                        style="@style/business_icon"
                        android:contentDescription="@string/japanese_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_japanese" />

                    <ImageView
                        android:id="@+id/type_grill"
                        style="@style/business_icon"
                        android:contentDescription="@string/grill_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_grill" />

                    <ImageView
                        android:id="@+id/type_mexican"
                        style="@style/business_icon"
                        android:contentDescription="@string/mexican_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_mexican" />

                    <ImageView
                        android:id="@+id/type_wine"
                        style="@style/business_icon"
                        android:contentDescription="@string/wine_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_wine" />

                    <ImageView
                        android:id="@+id/type_fast_food"
                        style="@style/business_icon"
                        android:contentDescription="@string/fast_food_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_fast_food" />

                    <ImageView
                        android:id="@+id/type_italian"
                        style="@style/business_icon"
                        android:contentDescription="@string/italian_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_italian" />

                    <ImageView
                        android:id="@+id/type_turkish"
                        style="@style/business_icon"
                        android:contentDescription="@string/turkish_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_turkish" />

                    <ImageView
                        android:id="@+id/type_american"
                        style="@style/business_icon"
                        android:contentDescription="@string/american_content_description"
                        android:padding="@dimen/marginSmall"
                        android:src="@drawable/ic_american" />

                </LinearLayout>

            </LinearLayout>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/marginSmall"
                map:cameraTargetLat="42.3383573"
                map:cameraTargetLng="-7.8987051"
                map:cameraZoom="20"
                map:uiRotateGestures="false"
                map:uiScrollGestures="true"
                map:uiTiltGestures="false"
                map:uiZoomControls="true"
                map:uiZoomGestures="true" />

            <TextView
                android:id="@+id/location_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginSmall"
                android:background="@color/primaryLightText"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:drawablePadding="@dimen/marginSmall"
                android:padding="@dimen/marginSmall"
                android:textSize="@dimen/textSize"
                android:visibility="gone"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginSmall"
        android:onClick="share"
        android:src="@drawable/ic_share_white_24dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
